# gdp-jwt-authorization

./: CHANGELOG.md  README.md  default.nix  gdp-simple.cabal  gdp-simple.nix  shell.nix
src/: App.hs  Settings.hs
src/App/: Delete.hs
src/Authorization/: Axioms.hs  Delete.hs  HasClaim.hs  HasRole.hs
src/Authorization/Delete/: Axioms.hs
src/Validation/: IssuedBy.hs  SignedWith.hs
src/Validation/Azure/: HasRole.hs
src/Validation/Okta/: HasRole.hs
