cabal-version:      3.0
name:               gdp-simple
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Joonas Laukka
maintainer:         joonas.laukka@relexsolutions.com

build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  Settings 
                    , App
                    , App.Delete
                    , Validation.IssuedBy
                    , Validation.Azure.HasRole
                    , Validation.Okta.HasRole
                    , Authorization.Axioms

    build-depends:    base ^>=4.15.1.0
                    , gdp 
                    , transformers
                    , mtl
                    , jose
                    , lens
                    , monad-time
                    , containers
                    , aeson
                    , text
                    , bytestring
                    , servant
                    , servant-client
                    , http-client
                    , http-client-tls
                    , base64-bytestring

    hs-source-dirs:   src
    default-language: Haskell2010
